RM-46625 Constructors should not be used to instantiate "String", "BigInteger", "BigDecimal" and primitive-wrapper classes